--- a/debian/control
+++ b/debian/control
@@ -1,10 +1,10 @@
 Source: nextcloud
-Section: unknown
+Section: web
 Priority: optional
 Maintainer: Rohan Garg <rohan@kde.org>
 Build-Depends: debhelper (>=9), dh-systemd
 Standards-Version: 3.9.8
-Homepage: <insert the upstream URL, if relevant>
+Homepage: https://nextcloud.com/
 
 Package: nextcloud
 Architecture: all
@@ -16,5 +16,8 @@ Depends: apache2,
          php5-json,
          php5-mysql,
          ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Description: cloud storage for files, music, contacts, calendars and many more
+ Nextcloud gives you universal access to your files through a web interface or
+ WebDAV. It also provides a platform to easily view & sync your contacts,
+ calendars and bookmarks across all your devices and enables basic editing
+ right on the web.
